# Raytracing-Journey

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Scene.ppm  imgui.ini  main.cc
include/: app.h  camera.h  color.h  common.h  hittable.h  lambertian.h  material.h  metal.h  plane.h  ray.h  sphere.h  vec3.h
include/core/: camera.h  hittable.h  ray.h  renderer.h  scene.h
include/material/: dielectric.h  lambertian.h  material.h  metal.h
include/objects/: group.h  plane.h  sphere.h
include/util/: timer.h
src/: app.cc  common.cc
src/core/: renderer.cc
src/material/: dielectric.cc  lambertian.cc  metal.cc
src/objects/: group.cc  plane.cc  sphere.cc
